test/unit/components/dialogue/scripts/invalid/choices-no-end.dscript
Bob angry C
I am angry right now. Are you?
Yes -> FRIENDSHIP
No -> FIGHT
Maybe -> IGNORE

Bob pleased M FRIENDSHIP
Excellent. Let us rage together.
